other one add another code html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
 <body> 
+
+<h1>This is a Heading.</h1>
 <p>First Paragraph.</p>  
+<p>This is Paragraph.</p>  
 <p>This is anotehr Paragraph.</p>  
+
 </body>
 </html>
